aded new changes

--- a/index.html
+++ b/index.html
@@ -2133,6 +2133,58 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               data-aos="fade-up"
               data-aos-delay="200"
             >
+        <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+              >
+                <img
+                  src="/assets//img/proj/Diabeteice.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>SCOLA mobile application </h4>
+                  <a
+                    href="https://play.google.com/store/apps/details?id=com.thusha2271.scholarships&hl=en"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg custom-icon"></i>
+
+                    <style>
+                      .custom-icon {
+                        font-size: 2.5rem; /* Adjust size */
+                        color: #078bcdd0; /* Change to a color you prefer */
+                      }
+                    </style></a
+                  >
+                </div>
+              </div>
+
+    <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
+              >
+                <img
+                  src="/assets//img/proj/Scola.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>DR Management Platform</h4>
+                  <a
+                    href="https://hgdsandakalum.github.io/index.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg custom-icon"></i>
+
+                    <style>
+                      .custom-icon {
+                        font-size: 2.5rem; /* Adjust size */
+                        color: #078bcdd0; /* Change to a color you prefer */
+                      }
+                    </style></a
+                  >
+                </div>
+              </div>
+
               <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
@@ -2625,14 +2677,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/NEXT JS Portfolio.jpg"
+                  src="/assets//img/proj/salonroyalglow.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>NEXT JS Portfolio</h4>
+                  <h4>Salon Royal Glow</h4>
                   <a
-                    href="next-project.html"
+                    href="https://salonroyalglow.vercel.app/"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg custom-icon"></i>
@@ -2648,38 +2700,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               </div>
               <!-- End Portfolio Item -->
 
-                 <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
-              >
-                <img
-                  src="/assets//img/proj/NEXT JS Portfolio.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>NEXT JS Portfolio</h4>
-                  <a
-                    href="next-project.html"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg custom-icon"></i>
-
-                    <style>
-                      .custom-icon {
-                        font-size: 2.5rem; /* Adjust size */
-                        color: #078bcdd0; /* Change to a color you prefer */
-                      }
-                    </style></a
-                  >
-                </div>
-              </div>
+  
               <!-- End Portfolio Item -->
 
                  <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/NEXT JS Portfolio.jpg"
+                  src="/assets//img/proj/pvd .png"
                   class="img-fluid"
                   alt=""
                 />
