--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   ><i class="bi bi-linkedin"></i
                 ></a>
                 <a
-                  href="https://www.youtube.com/@THVNetworkOfficial"
+                  href="https://www.youtube.com/@ThushanVithana"
                   style="
                     color: #0d47a1;
                     font-size: 1.8rem;
